<resources>
    <string name="app_name">Weather App</string>
    <string name="app_welcome">Welcome to our weather app! Head to the map to view weather updates near you</string>
    <string name="stats_header">Your stats:</string>
    <string name="stats_pinsUploadedHeader">Map Pins Uploaded</string>
    <string name="stats_AccountCreatedHeader">Account Creation Date</string>
    <string name="logout">Logout</string>
    <string name="accountFunctions">Account Functionss</string>

    <string name="error_permission_map">error_permission_map</string>
    <string name="permission_not_granted">Please grant permission!</string>
    <string name="error_location_perms">Permission to use Location has been denied.</string>
    <string name="ok">All good!</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="home">Home</string>
    <string name="map">Map</string>

    <string name="weather_nav">Upload Weather Pin</string>
    <string name="my_account">My Account</string>
    <string name="something">Something</string>
    <string name="settings">Settings</string>
    <string name="dummy">Dummy Text</string>

    <string name="communicate">Communicate</string>
    <string name="share">Share</string>
    <string name="send">Send</string>

    <string name="login">Login</string>
    <string name="sign_up">Sign-Up</string>
    <string name="no_account">No account? Sign up Below!</string>
    <string name="username_enter">Username: </string>
    <string name="password_enter">Password: </string>

    <string name="enter_weather">Want to tell us your current weather? Enter your current weather
    statistics below to let us know!</string>
    <string name="temperature">Current Temp: </string>
    <string name="weather">Weather: </string>
    <string name="picture">Upload Picture: </string>
    <string name="upload">Upload</string>
    <string name="other">Other: </string>
    <array name="weather_spinner">
        <item>Sunny</item>
        <item>Cloudy</item>
        <item>Rain</item>
        <item>Thunder</item>
        <item>Rainbow :)</item>
    </array>
    <string name="uploadSuccess">Weather information uploaded successfully!</string>

    <string name="unexpected">An unexpected error occured. Please try again!</string>
    <string name="waiting">Waiting for response</string>
    <string name="oops">Oops! Something broke</string>


    <string name="credits">Created by Tom Maddox and Alicia Cordon</string>

</resources>
