<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    tools:context=".WeatherFragment"

    android:background="#ffffffff">

    <Button
        android:id="@+id/upload_weather_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="96dp"

        android:text="Button"
        android:textColor="@android:color/black"
        app:fontFamily="monospace" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="302dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="26dp"
        android:text="@string/enter_weather"
        android:textColor="@android:color/black"
        app:fontFamily="monospace" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"

        android:layout_marginStart="14dp"
        android:layout_marginLeft="14dp"
        android:layout_marginTop="98dp"

        android:text="@string/temperature"
        android:textColor="@android:color/black"
        app:fontFamily="monospace" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/textView8"
        android:layout_alignLeft="@+id/textView8"
        android:layout_marginTop="151dp"

        android:text="@string/weather"
        android:textColor="@android:color/black"
        app:fontFamily="monospace" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/textView8"
        android:layout_alignLeft="@+id/textView8"
        android:layout_marginBottom="191dp"

        android:text="@string/other"
        android:textColor="@android:color/black"
        app:fontFamily="monospace" />

    <TextView
        android:id="@+id/temperature_output"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/textView8"
        android:layout_marginEnd="140dp"
        android:layout_marginRight="140dp"

        android:textColor="@android:color/black"
        app:fontFamily="monospace" />

    <Spinner
        android:id="@+id/weather_spinner"
        android:layout_width="236dp"
        android:layout_height="wrap_content"

        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/textView9"
        android:layout_marginEnd="22dp"
        android:layout_marginRight="22dp"

        android:entries="@array/weather_spinner"
        android:textColor="@android:color/black"
        app:fontFamily="monospace" />

    <EditText
        android:id="@+id/other_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="180dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:ems="10"

        android:inputType="text|textPersonName"
        android:textColor="@android:color/black"
        app:fontFamily="monospace" />

</RelativeLayout>